force-app/main/default/objects/ULBC_Email_Event__c/ULBC_Email_Event__c.object-meta.xml
<CustomObject>
    <description>Forensic write-only log of tracking pings (open / click / unsub / bounce). Lookup (not master-detail) to ULBC_Email_Send_Recipient__c so the public Site endpoint can do a blind insert without locking parent rollups during high-volume opens. ULBC_EmailEventAggregator runs every 5 minutes to roll counts onto Recipient.</description>
    <label>ULBC Email Event</label>
    <nameField>
        <displayFormat>EEV-{0000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ULBC Email Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>