force-app/main/default/objects/ULBC_Email_Event__c/fields/ULBC_Aggregated__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Aggregated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marker flipped by ULBC_EmailEventAggregator after the row's contribution has been folded into the parent recipient counts. Indexed-friendly via the predicate Aggregated__c = false on the aggregator's SOQL.</description>
    <label>Aggregated</label>
    <type>Checkbox</type>
</CustomField>