force-app/main/default/objects/ULBC_Email_Event__c/fields/ULBC_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Event_Type__c</fullName>
    <description>What this ping represents. Open = pixel hit. Click = redirect endpoint hit. Unsubscribe = unsub endpoint hit. Bounce = inbound bounce notification (v2).</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Click</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Bounce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>