force-app/main/default/objects/ULBC_Email_Event__c/fields/ULBC_IP_Hash__c.field-meta.xml
<CustomField>
    <fullName>ULBC_IP_Hash__c</fullName>
    <description>SHA-256 hex of (ULBC_Email_Settings__c.IPHashSalt__c + recipient IP). Raw IPs are never stored (UK GDPR data minimisation). Same-day correlation works as long as the salt is unchanged; salt rotation makes historical IPs unrecoverable.</description>
    <label>IP Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>