force-app/main/default/objects/ULBC_Email_Event__c/fields/ULBC_Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Occurred_At__c</fullName>
    <description>System.now() at the moment the Site endpoint received the ping. Used by the aggregator to set First_Open_At / First_Click_At on the recipient.</description>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>