force-app/main/default/objects/ULBC_Email_Event__c/fields/ULBC_Recipient__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Recipient__c</fullName>
    <description>Recipient this ping was for. Lookup (not master-detail) by design — blind inserts from the public Site endpoint must not lock the parent rollup. SetNull on delete: if a recipient is purged, the event row remains as an orphan for forensic purposes.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>ULBC_Email_Send_Recipient__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>