force-app/main/default/objects/ULBC_Email_Event__c/fields/ULBC_URL__c.field-meta.xml
<CustomField>
    <fullName>ULBC_URL__c</fullName>
    <description>For Click events: the destination URL that was rewritten and clicked. Decoded before storage.</description>
    <label>Clicked URL</label>
    <type>Url</type>
</CustomField>