force-app/main/default/objects/ULBC_Email_Event__c/fields/ULBC_User_Agent__c.field-meta.xml
<CustomField>
    <fullName>ULBC_User_Agent__c</fullName>
    <description>User-Agent header on the ping request. Apple MPP and Gmail proxies have distinctive UAs — useful for filtering bot opens out of engagement reporting.</description>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>